Current:
  * Zoom gestures for more computers
  * Speed and appearance improvements
  * Bug fixes

18.10:
  * Defer any try to change Maxima's configuration until all questions are answered.
  * A menu item that sets the autosubscript feature for the current worksheet.
  * A menu allowing to switch floats to engineering format.
  * Maxima can now pass the values of variables to wxMaxima.
  * Autocompletion for functions from lisp-only packages and for all of maxima's.
    built in functions.
  * A context-sensitive "draw" sidepane.
  * We now allow a packet from Maxima to end in the middle of an unicode codepoint.
  * If the name of a lisp function is known it now is displayed.
  * A right-click menu that copies an animation to the clipboard.
  * A new default value for the current MathJaX release.
  * A "recent packages" menu for packages loaded from load() or from the menu.
  * Advertise the current file and the file's state to the Operating System
  * Copy as Enhanced Metafile (Windows only).
  * Code simplifications.
  * A dockable panel for the debug messages.
  * A more modern theme.
  * Draw: A right-click menu allowing to open images from the current session as
    interactive gnuplot sessions.
  * Migrate the config file to a XDG-compatible location if wxWidgets is new enough
    to support it.
  * A "Tip of the day" dialogue that allows for resizing, scrollbars and work while
    it is still open.
  * Matrices can now be displayed using round and square brackets.
  * Various High-DPI enhancements.
  * Enhancements for low-resolution screens.
  * Many bug fixes.
  * Reduced the number of autogenerated files, installed files and external
    dependencies to a minimum.
  * Big performance improvements, again.

18.02:
  * More tooltips
  * A menu containing the most important commands for lists.
  * TableOfContents: A right-click menu item that allows to toggle display of section numbers