@@ -36,6 +36,10 @@ LimitCell::LimitCell(MathCell *parent, Configuration **config, CellPointers *cel
   m_base = NULL;
   m_under = NULL;
   m_name = NULL;
+  m_open = new TextCell(parent, config, cellPointers, "(");
+  m_comma = new TextCell(parent, config, cellPointers, ",");
+  m_close = new TextCell(parent, config, cellPointers, ")");
+
   m_cellPointers = cellPointers;
 }
 
@@ -48,6 +52,12 @@ void LimitCell::SetGroup(MathCell *parent)
     m_under->SetGroupList(parent);
   if (m_name != NULL)
     m_name->SetGroupList(parent);
+  if (m_open != NULL)
+    m_open->SetGroupList(parent);
+  if (m_comma != NULL)
+  m_comma->SetGroupList(parent);
+  if (m_close != NULL)
+    m_close->SetGroupList(parent);
 }
 
 MathCell *LimitCell::Copy()
@@ -66,8 +76,11 @@ LimitCell::~LimitCell()
   wxDELETE(m_base);
   wxDELETE(m_under);
   wxDELETE(m_name);
-  m_base = m_under = m_name = NULL;
+  wxDELETE(m_open);
+  wxDELETE(m_comma);
+  wxDELETE(m_close);
   MarkAsDeleted();
+  m_base = m_under = m_name = m_open = m_comma = m_close = NULL;
 }
 
 std::list<MathCell *> LimitCell::GetInnerCells()
@@ -79,6 +92,12 @@ std::list<MathCell *> LimitCell::GetInnerCells()
     innerCells.push_back(m_under);
   if(m_name)
     innerCells.push_back(m_name);
+  if(m_open)
+    innerCells.push_back(m_open);
+  if(m_comma)
+    innerCells.push_back(m_comma);
+  if(m_close)
+    innerCells.push_back(m_close);
   return innerCells;
 }
 
@@ -87,7 +106,9 @@ void LimitCell::SetName(MathCell *name)
   if (name == NULL)
     return;
   wxDELETE(m_name);
-  m_name = name;
+  m_name_last = m_name = name;
+  while(m_name_last->m_next != NULL)
+    m_name_last = m_name_last->m_next;
 }
 
 void LimitCell::SetBase(MathCell *base)
@@ -95,7 +116,9 @@ void LimitCell::SetBase(MathCell *base)
   if (base == NULL)
     return;
   wxDELETE(m_base);
-  m_base = base;
+  m_base_last = m_base = base;
+  while(m_base_last->m_next != NULL)
+    m_base_last = m_base_last->m_next;
 }
 
 void LimitCell::SetUnder(MathCell *under)
@@ -103,31 +126,63 @@ void LimitCell::SetUnder(MathCell *under)
   if (under == NULL)
     return;
   wxDELETE(m_under);
-  m_under = under;
+  m_under_last = m_under = under;
+  while(m_under_last->m_next != NULL)
+    m_under_last = m_under_last->m_next;
 }
 
 void LimitCell::RecalculateWidths(int fontsize)
 {
   MathCell::RecalculateWidths(fontsize);
-  m_base->RecalculateWidthsList(fontsize);
-  m_under->RecalculateWidthsList(MAX(MIN_LIMIT_FONT_SIZE, fontsize - LIMIT_FONT_SIZE_DECREASE));
-  m_name->RecalculateWidthsList(fontsize);
+  if(m_base)
+    m_base->RecalculateWidthsList(fontsize);
+  if(m_under)
+    m_under->RecalculateWidthsList(MAX(MIN_LIMIT_FONT_SIZE, fontsize - LIMIT_FONT_SIZE_DECREASE));
+  if(m_name)
+    m_name->RecalculateWidthsList(fontsize);
+  if(m_open)
+    m_open->RecalculateWidthsList(fontsize);
+  if(m_comma)
+    m_comma->RecalculateWidthsList(fontsize);
+  if(m_close)
+    m_close->RecalculateWidthsList(fontsize);
 
-  m_width = MAX(m_name->GetFullWidth(), m_under->GetFullWidth())
-            + m_base->GetFullWidth();
+  if (!m_isBrokenIntoLines)
+    m_width = MAX(m_name->GetFullWidth(), m_under->GetFullWidth())
+      + m_base->GetFullWidth();
+  else
+    m_width = 0;
+  
   ResetData();
 }
 
 void LimitCell::RecalculateHeight(int fontsize)
 {
   MathCell::RecalculateHeight(fontsize);
-  m_under->RecalculateHeightList(MAX(MIN_LIMIT_FONT_SIZE, fontsize - LIMIT_FONT_SIZE_DECREASE));
-  m_name->RecalculateHeightList(fontsize);
-  m_base->RecalculateHeightList(fontsize);
+  if(m_under)
+    m_under->RecalculateHeightList(MAX(MIN_LIMIT_FONT_SIZE, fontsize - LIMIT_FONT_SIZE_DECREASE));
+  if(m_name)
+    m_name->RecalculateHeightList(fontsize);
+  if(m_base)
+    m_base->RecalculateHeightList(fontsize);
+  if(m_open)
+    m_open->RecalculateHeightList(fontsize);
+  if(m_comma)
+    m_comma->RecalculateHeightList(fontsize);
+  if(m_close)
+    m_close->RecalculateHeightList(fontsize);
 
-  m_center = MAX(m_base->GetMaxCenter(), m_name->GetMaxCenter());
-  m_height = m_center + MAX(m_name->GetMaxDrop() + m_under->GetMaxHeight(),
-                            m_base->GetMaxDrop());
+  if (!m_isBrokenIntoLines)
+  {
+    m_center = MAX(m_base->GetMaxCenter(), m_name->GetMaxCenter());
+    m_height = m_center + MAX(m_name->GetMaxDrop() + m_under->GetMaxHeight(),
+                              m_base->GetMaxDrop());
+  }
+  else
+  {
+    m_height = m_name->GetMaxHeight();
+    m_center = m_name->GetMaxCenter();
+  }
 }
 
 void LimitCell::Draw(wxPoint point)
@@ -233,4 +288,41 @@ wxString LimitCell::ToOMML()
   return _T("<m:func><m:fName><m:limLow><m:e><m:r>lim</m:r></m:e><m:lim>") +
          under + _T("</m:lim></m:limLow></m:fName><m:e>") +
          m_base->ListToOMML() + _T("</m:e></m:func>");
+}
+
+
+bool LimitCell::BreakUp()
+{
+  if (!m_isBrokenIntoLines)
+  {
+    m_isBrokenIntoLines = true;
+    m_name_last->m_nextToDraw = m_open;
+    m_open->m_nextToDraw = m_base;
+    m_base_last->m_nextToDraw = m_comma;
+    m_comma->m_nextToDraw = m_under;
+    m_under_last->m_nextToDraw = m_close;
+    m_close->m_nextToDraw = m_nextToDraw;
+    if(m_nextToDraw != NULL)
+      m_nextToDraw->m_previousToDraw = m_close;
+    m_nextToDraw = m_name;
+    m_name->m_previousToDraw = this;
+    m_open->m_previousToDraw = m_name_last;
+    m_base->m_previousToDraw = m_open;
+    m_comma->m_previousToDraw = m_base_last;
+    m_under->m_previousToDraw = m_comma;
+    m_close->m_previousToDraw = m_under_last;
+    return true;
+  }
+  return false;
+}
+
+void LimitCell::Unbreak()
+{
+  if (m_isBrokenIntoLines)
+  {
+    m_name->UnbreakList();
+    m_base->UnbreakList();
+    m_under->UnbreakList();
+  }
+  MathCell::Unbreak();
 }
