@@ -1,5 +1,6 @@
 Current:
   * Zoom gestures for more computers
+  * Limit cells now can be broken into lines if they are too wide for the window
   * Speed and appearance improvements
   * Bug fixes
 
